// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connect Factory for bindings should component receive rules prop with all combined rules 1`] = `
Array [
  "<style>
    .a {
        padding: 2
    }

    .b {
        font-size: 16
    }

    .c {
        color: red
    }
</style>",
  <ConnectedFelaComponent>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
    >
        <Component
            rules={[Function]}
            styles={
                Object {
                    "rule1": "a",
                    "rule2": "b",
                  }
            }
        >
            <div>
                <ConnectedFelaComponent
                    color="red"
                    extend={[Function]}
                >
                    <ConnectedFelaComponent
                        _felaTheme={Object {}}
                        color="red"
                        extend={[Function]}
                    >
                        <Component
                            color="red"
                            rules={[Function]}
                            styles={
                                Object {
                                    "rule1": "a",
                                    "rule2": "c b",
                                  }
                            }
                        >
                            <div>
                                <span
                                    className="a"
                                />
                                <span
                                    className="c b"
                                />
                            </div>
                        </Component>
                    </ConnectedFelaComponent>
                </ConnectedFelaComponent>
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should compose styles 1`] = `
Array [
  "<style>
    .a {
        padding: 2
    }

    .b {
        color: red
    }

    .c {
        font-size: 16
    }
</style>",
  <FelaConnectedFelaComponent
    color="red"
>
    <FelaConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <ConnectedFelaComponent
            _felaRules={[Function]}
            color="red"
        >
            <ConnectedFelaComponent
                _felaRules={[Function]}
                _felaTheme={Object {}}
                color="red"
            >
                <Component
                    color="red"
                    rules={[Function]}
                    styles={
                        Object {
                            "rule1": "a",
                            "rule2": "b c",
                          }
                    }
                >
                    <div>
                        <span
                            className="a"
                        />
                        <span
                            className="b c"
                        />
                    </div>
                </Component>
            </ConnectedFelaComponent>
        </ConnectedFelaComponent>
    </FelaConnectedFelaComponent>
</FelaConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should extend the rule properties 1`] = `
Array [
  "<style>
    .a {
        padding: 2
    }

    .b {
        color: red
    }

    .c {
        font-size: 16
    }
</style>",
  <ConnectedFelaComponent
    color="red"
    extend={
        Object {
            "rule1": Object {
              "padding": 2,
            },
            "rule2": Object {
              "fontSize": 16,
            },
          }
    }
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
        extend={
            Object {
                "rule1": Object {
                  "padding": 2,
                },
                "rule2": Object {
                  "fontSize": 16,
                },
              }
        }
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "a",
                    "rule2": "b c",
                  }
            }
        >
            <div>
                <span
                    className="a"
                />
                <span
                    className="b c"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should not pass through "theme" prop when used without "ThemeProvider" 1`] = `
Array [
  "<style>
    .a {
        padding: 1
    }

    .b {
        color: red
    }
</style>",
  <ConnectedFelaComponent
    color="red"
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "a",
                    "rule2": "b",
                  }
            }
        >
            <div
                color="red"
            >
                <span
                    className="a"
                />
                <span
                    className="b"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should process rules and create classNames 1`] = `
Array [
  "<style>
    .a {
        padding: 1
    }

    .b {
        color: red
    }
</style>",
  <ConnectedFelaComponent
    color="red"
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "a",
                    "rule2": "b",
                  }
            }
        >
            <div>
                <span
                    className="a"
                />
                <span
                    className="b"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;

exports[`Connect Factory for bindings should process rules and create classNames with rules as function 1`] = `
Array [
  "<style>
    .a {
        padding: 1
    }

    .b {
        color: red
    }
</style>",
  <ConnectedFelaComponent
    color="red"
>
    <ConnectedFelaComponent
        _felaTheme={Object {}}
        color="red"
    >
        <Component
            color="red"
            rules={[Function]}
            styles={
                Object {
                    "rule1": "a",
                    "rule2": "b",
                  }
            }
        >
            <div>
                <span
                    className="a"
                />
                <span
                    className="b"
                />
            </div>
        </Component>
    </ConnectedFelaComponent>
</ConnectedFelaComponent>,
]
`;
